cluster/apps/default/mealie/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-mealie
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mealie.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      # middlewares:
      #   - name: rfc1918
      #   - name: basicauth
      services:
        - name: mealie
          namespace: default
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: '${SECRET_DOMAIN/./-}-tls'
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
